reorganisation des sections

--- a/src/app/components/concept/concept.component.html
+++ b/src/app/components/concept/concept.component.html
@@ -1,39 +1,50 @@
-<p>
-  Vous aimez les escapes games ? Vous aimez nager ?
-  C’est une grande première qui va avoir lieu à la piscine couverte de Valentigney, </p>
-  
-<p> Un escape game va prendre place dans la piscine !</p>
-  
-<p>
-Ce jeu d’évasion grandeur nature sera bien particulier. 
-Il s’agira d’un <span style="font-size:25px">escape game… aquatique ! </span> Le tout premier de la région. Il sera mis en place par l'équipe du Bureau 401 (Grand-Charmont), qui organise un escape game toute l'année au Fort Lachaux.
-</p>
-<p>
-  Il faudra pour cette aventure faire appel, à votre tête.. et à vos jambes !
-  Quelques <span style="font-size:25px"> 2000 m2 </span> de jeu rien que pour vous (pendant la durée du jeu, la piscine est entièrement privatisée), avec un eau chauffée à 29°C. 
-</p>
-<p>
-  Vous aurez 1H pour mener à bien votre mission, et sortir vainqueur!
-</p>
-<p>
-  Il faudra être rapide, et malin afin de battre les autres équipes.
-  Pour votre sécurité, il faudra savoir nager 25m minimum 
-</p>
-<br/>
+<div class="section section-download" id="concept" data-background-color="black">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="text-center col-md-12 col-lg-8">
+        <h3 class="title">Concept</h3>
+        <p>
+          Vous aimez les escapes games ? Vous aimez nager ?
+          C’est une grande première qui va avoir lieu à la piscine couverte de Valentigney, </p>
 
-<div class="row">
+        <p> Un escape game va prendre place dans la piscine !</p>
 
-  <div class="col-md-6">
-    <img class="fit-picture"
-          width = "50%"
-         src="../assets/img/sauna.jpg"
-         alt="escape game swin val piscine: le sauna" />  
+        <p>
+          Ce jeu d’évasion grandeur nature sera bien particulier.
+          Il s’agira d’un <span style="font-size:25px">escape game… aquatique ! </span> Le tout premier de la région. Il
+          sera mis en place par l'équipe du Bureau 401 (Grand-Charmont), qui organise un escape game toute l'année au
+          Fort Lachaux.
+        </p>
+        <p>
+          Il faudra pour cette aventure faire appel, à votre tête.. et à vos jambes !
+          Quelques <span style="font-size:25px"> 2000 m2 </span> de jeu rien que pour vous (pendant la durée du jeu, la
+          piscine est entièrement privatisée), avec un eau chauffée à 29°C.
+        </p>
+        <p>
+          Vous aurez 1H pour mener à bien votre mission, et sortir vainqueur!
+        </p>
+        <p>
+          Il faudra être rapide, et malin afin de battre les autres équipes.
+          Pour votre sécurité, il faudra savoir nager 25m minimum
+        </p>
+        <br />
+
+        <div class="row">
+
+          <div class="col-md-6">
+            <img class="fit-picture" width="50%" src="../assets/img/sauna.jpg"
+              alt="escape game swin val piscine: le sauna" />
+          </div>
+          <div class="col-md-6 d-flex justify-content-start">
+            <p>
+              Après votre aventure, et quelque soit le résultat, vous pourrez profiter gratuitement de l'espace détente
+              qui comprend un <span style="font-size:25px"> sauna et un hammam.</span>
+
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col-md-6 d-flex justify-content-start">
-    <p>
-      Après votre aventure, et quelque soit le résultat, vous pourrez profiter gratuitement de l'espace détente qui comprend un <span style="font-size:25px"> sauna et un hammam.</span>
-      
-    </p>
-  </div>
-
 </div>
