--- a/src/app/components/conseils/conseils.component.html
+++ b/src/app/components/conseils/conseils.component.html
@@ -1,4 +1,4 @@
-<div class="section section-team text-center" id="#conseils" data-background-color="black">
+<div class="section section-team text-center" id="conseils" data-background-color="black">
     <div class="container">
         <h2 class="title">Conseils</h2>
         <p>Pour profiter pleinement de l'aventure, il est nécessaire de suivre ces petits conseils</p>        
