--- a/src/app/components/tarifs/tarifs.component.html
+++ b/src/app/components/tarifs/tarifs.component.html
@@ -1,3 +1,9 @@
+<div class="section section-team text-center">
+    <div class="container">
+        <h2 class="title">Tarifs</h2>
+                    
+ 
+
 <section id="tarifs" >
   <div class="container">
       <div class="row">
@@ -39,3 +45,5 @@
       </div>
   </div>
 </section>
+</div>
+</div>
