--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -1,21 +1,21 @@
-
-<div class="wrapper">y
+<div class="wrapper">
     <div class="page-header clear-filter" filter-color="blue">
-        <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/affiche.jpg');">
+        <div class="page-header-image rellax-header" data-rellax-speed="-8"
+            style="background-image: url('assets/img/affiche.jpg');">
         </div>
         <div class="container">
             <div class="content-center">
                 <h1 class="title">S.O.S PISCINE</h1>
                 <div class="text-center">
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                    <i class="fab fa-facebook-square"></i>
-                  </a>
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                    <i class="fab fa-google-plus"></i>
-                  </a>
+                    <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                        <i class="fab fa-google-plus"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -24,28 +24,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto text-center">
-                    <h2 class="title">Venez participer à une vraie Escape Game, dans une vrai piscine, chez Swin Val Piscine à valentigney</h2>
+                    <h2 class="title">Venez participer à une vraie Escape Game, dans une vrai piscine, chez Swin Val
+                        Piscine à valentigney</h2>
                     <h2>Une première dans le pays de Montbéliard</h2>
                     <h2> 2000 m2 de jeux rien que pour vous</h2>
-                    <p>Pendant plus d'une heure, la piscine entière vous est réservée. Jusqu'a 5 équipes de 6 joueurs pourront s'affronter dans une eau chauffée à 29°C...</p>
-                    <p>Pour sortie vainqueur de cette épreuve, la natation ne vous suffira pas.... Il faudra aussi utiliser votre tête !</p>
+                    <p>Pendant plus d'une heure, la piscine entière vous est réservée. Jusqu'a 5 équipes de 6 joueurs
+                        pourront s'affronter dans une eau chauffée à 29°C...</p>
+                    <p>Pour sortie vainqueur de cette épreuve, la natation ne vous suffira pas.... Il faudra aussi
+                        utiliser votre tête !</p>
                 </div>
             </div>
-            <div class="separator separator-primary"></div>
+        </div>
+    </div>
 
-            <p class="blockquote blockquote-primary">"Le téléphone sonne, c'est le gérant de SwiwVal Piscine, il a besoin de notre équipe"
+
+    <app-concept></app-concept>
+
+
+    <div class="section section-about-us">
+        <div class="container">
+
+            <p class="blockquote blockquote-primary">"Le téléphone sonne, c'est le gérant de SwiwVal Piscine, il a
+                besoin de notre équipe"
                 <br>
                 <small>- Louis, Directeur d'une entreprise de maintenance</small>
-                
+
 
             </p>
 
             <div class="section-story-overview">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="image-container image-left "  style="background-image: url('assets/img/casier.jpg')">
+                        <div class="image-container image-left " style="background-image: url('assets/img/casier.jpg')">
                             <!-- First image on the left side -->
-                            <p class="blockquote blockquote-primary">"Travailler dans une entreprise de maintenance de piscine finalement, c'est sympa. C'est à chaque fois une nouvelle aventure. Mais cette fois ci, on ne pensait pas vraiment à ce qu'il allait nous arriver.."
+                            <p class="blockquote blockquote-primary">"Travailler dans une entreprise de maintenance de
+                                piscine finalement, c'est sympa. C'est à chaque fois une nouvelle aventure. Mais cette
+                                fois ci, on ne pensait pas vraiment à ce qu'il allait nous arriver.."
                                 <br>
                                 <br>
                                 <small>-Germain, employé</small>
@@ -56,20 +70,28 @@
                     </div>
                     <div class="col-md-5">
                         <!-- First image on the right side, above the article -->
-                        <div class="image-container image-right" style="background-image: url('assets/img/bassin.jpg')"></div>
-                        <h3>UNE FOIS À L'INTÉRIEUR NE FAITES CONFIANCE À PERSONNE.PASSEZ CE MESSAGE A VOS COLLEGUES...</h3>
-                        <p>Maintenant, il faut préparer le déplacement, je ne pensais pas qu’avec mes diplômes j'allais travailler dans une entreprise d’installation de piscine. 
-                            Mais après tout c’est plutôt sympa. J’aime bien me déplacer, surtout quand on y va avec les collègues. 
-                            Depuis le temps nous sommes rodé, chacun son job, à moi l’installation et la maintenance des pompes, Pour mes collègues c’est pareil, ça va des tests chimiques à l’électricité. 
-                            Pis bon, avec ces frais de déplacement, c’est toujours l’occasion de boire un coup et faire un bon resto !
- 
-                                
-                                
+                        <div class="image-container image-right" style="background-image: url('assets/img/bassin.jpg')">
+                        </div>
+                        <h3>UNE FOIS À L'INTÉRIEUR NE FAITES CONFIANCE À PERSONNE.PASSEZ CE MESSAGE A VOS COLLEGUES...
+                        </h3>
+                        <p>Maintenant, il faut préparer le déplacement, je ne pensais pas qu’avec mes diplômes j'allais
+                            travailler dans une entreprise d’installation de piscine.
+                            Mais après tout c’est plutôt sympa. J’aime bien me déplacer, surtout quand on y va avec les
+                            collègues.
+                            Depuis le temps nous sommes rodé, chacun son job, à moi l’installation et la maintenance des
+                            pompes, Pour mes collègues c’est pareil, ça va des tests chimiques à l’électricité.
+                            Pis bon, avec ces frais de déplacement, c’est toujours l’occasion de boire un coup et faire
+                            un bon resto !
+
+
+
                         </p>
                         <p>
-                            Prochaine destination, une ville perdue dans l’Est de la France, pour de la maintenance. J’espère juste qu’on trouvera de quoi manger après 20 h…
+                            Prochaine destination, une ville perdue dans l’Est de la France, pour de la maintenance.
+                            J’espère juste qu’on trouvera de quoi manger après 20 h…
                         </p>
-                        <p>Bisous à mon appartement, je pars pour la grande aventure, direction région  “Grand Est”, chez SwinVal piscine.
+                        <p>Bisous à mon appartement, je pars pour la grande aventure, direction région “Grand Est”, chez
+                            SwinVal piscine.
                         </p>
                     </div>
                 </div>
@@ -77,46 +99,39 @@
         </div>
     </div>
 
-    <div class="section section-download" id="#concept" data-background-color="black">
-        <div class="container">
-            <div class="row justify-content-md-center">
-                <div class="text-center col-md-12 col-lg-8">
-                    <h3 class="title">Concept</h3>
-                    <app-concept></app-concept>
-                </div>
-            </div>
-        </div>
-    </div>   
-    
-    <div class="section section-team text-center">
-        <div class="container">
-            <h2 class="title">Tarifs</h2>
-            <app-tarifs></app-tarifs>            
-        </div>
-    </div>   
-    
-            <app-conseils></app-conseils>
+
+
+    <app-tarifs></app-tarifs>
+
+    <app-conseils></app-conseils>
+
     <div class="section section-team text-center">
         <div class="container">
             <h2 class="title">Reservations</h2>
-            
-            
         </div>
-    </div>   
+    </div>
     <div class="section section-download" id="#download-section" data-background-color="black">
         <div class="container">
             <div class="row justify-content-md-center">
                 <div class="text-center col-md-12 col-lg-8">
                     <h3 class="title">Un truc à ajouter ?</h3>
-                    <h5 class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto molestias fugit iste! Officiis dolorem delectus error et, alias tempore cum, enim vitae nihil voluptate dignissimos quod voluptas fugiat earum at.
-                    Doloribus perferendis expedita quod, deserunt fugit minima voluptatem sit vel eligendi, totam debitis voluptate. Tempore, dolor? Distinctio expedita odit rem aliquid, architecto deserunt perspiciatis illo incidunt pariatur, ullam, nobis deleniti!
-                    Et cum, quos repellat ut dolore iste omnis vitae labore. Perspiciatis praesentium aspernatur possimus recusandae vero deleniti adipisci. Mollitia unde molestiae commodi repellat magnam facilis suscipit repellendus incidunt velit dolorum!</h5>
+                    <h5 class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto molestias
+                        fugit iste! Officiis dolorem delectus error et, alias tempore cum, enim vitae nihil voluptate
+                        dignissimos quod voluptas fugiat earum at.
+                        Doloribus perferendis expedita quod, deserunt fugit minima voluptatem sit vel eligendi, totam
+                        debitis voluptate. Tempore, dolor? Distinctio expedita odit rem aliquid, architecto deserunt
+                        perspiciatis illo incidunt pariatur, ullam, nobis deleniti!
+                        Et cum, quos repellat ut dolore iste omnis vitae labore. Perspiciatis praesentium aspernatur
+                        possimus recusandae vero deleniti adipisci. Mollitia unde molestiae commodi repellat magnam
+                        facilis suscipit repellendus incidunt velit dolorum!</h5>
                 </div>
                 <div class="text-center col-md-12 col-lg-8">
-                    <a href="https://www.creative-tim.com/product/now-ui-kit-angular" class="btn btn-primary btn-lg btn-round" role="button">
+                    <a href="https://www.creative-tim.com/product/now-ui-kit-angular"
+                        class="btn btn-primary btn-lg btn-round" role="button">
                         Download Angular
                     </a>
-                    <a href="https://www.invisionapp.com/now" target="_blank" class="btn btn-primary btn-lg btn-simple btn-round" role="button">
+                    <a href="https://www.invisionapp.com/now" target="_blank"
+                        class="btn btn-primary btn-lg btn-simple btn-round" role="button">
                         Download PSD/Sketch
                     </a>
                 </div>
@@ -128,10 +143,13 @@
                 <div class="col-md-8 ml-auto mr-auto">
                     <h2>Want more?</h2>
                     <h5 class="description">We've just launched
-                        <a href="https://timcreative.github.io/now-ui-kit-pro-angular/presentation" target="_blank">Now UI Kit PRO Angular</a>. It has a huge number of components, sections and example pages. Start Your Development With A Badass Bootstrap 4 UI Kit.</h5>
+                        <a href="https://timcreative.github.io/now-ui-kit-pro-angular/presentation" target="_blank">Now
+                            UI Kit PRO Angular</a>. It has a huge number of components, sections and example pages.
+                        Start Your Development With A Badass Bootstrap 4 UI Kit.</h5>
                 </div>
                 <div class="col-md-12">
-                    <a href="https://timcreative.github.io/now-ui-kit-pro-angular/presentation" class="btn btn-neutral btn-round btn-lg" target="_blank">
+                    <a href="https://timcreative.github.io/now-ui-kit-pro-angular/presentation"
+                        class="btn btn-neutral btn-round btn-lg" target="_blank">
                         <i class="now-ui-icons arrows-1_share-66"></i> Upgrade to PRO
                     </a>
                 </div>
@@ -139,23 +157,28 @@
             <br>
             <br>
             <div class="row justify-content-md-center sharing-area text-center">
-              <div class="text-center col-md-12 col-lg-8">
-                <h3>Thank you for supporting us!</h3>
-              </div>
-              <div class="text-center col-md-12 col-lg-8">
-                <a target="_blank" href="https://www.twitter.com/creativetim" class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg" rel="tooltip" title="Follow us">
-                  <i class="fab fa-twitter"></i>
-                </a>
-                <a target="_blank" href="https://www.facebook.com/creativetim" class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg" rel="tooltip" title="Like us">
-                  <i class="fab fa-facebook-square"></i>
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/company-beta/9430489/" class="btn btn-neutral btn-icon btn-linkedin btn-lg btn-round" rel="tooltip" title="Follow us">
-                  <i class="fab fa-linkedin"></i>
-                </a>
-                <a target="_blank" href="https://github.com/creativetimofficial/now-ui-kit-angular" class="btn btn-neutral btn-icon btn-github btn-round btn-lg" rel="tooltip" title="Star on Github">
-                  <i class="fab fa-github"></i>
-                </a>
-              </div>
+                <div class="text-center col-md-12 col-lg-8">
+                    <h3>Thank you for supporting us!</h3>
+                </div>
+                <div class="text-center col-md-12 col-lg-8">
+                    <a target="_blank" href="https://www.twitter.com/creativetim"
+                        class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg" rel="tooltip" title="Follow us">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a target="_blank" href="https://www.facebook.com/creativetim"
+                        class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg" rel="tooltip" title="Like us">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a target="_blank" href="https://www.linkedin.com/company-beta/9430489/"
+                        class="btn btn-neutral btn-icon btn-linkedin btn-lg btn-round" rel="tooltip" title="Follow us">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a target="_blank" href="https://github.com/creativetimofficial/now-ui-kit-angular"
+                        class="btn btn-neutral btn-icon btn-github btn-round btn-lg" rel="tooltip"
+                        title="Star on Github">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -187,10 +210,10 @@
             </nav>
             <div class="copyright">
                 &copy;
-              {{data | date: 'yyyy'}}, Designed by
+                {{data | date: 'yyyy'}}, Designed by
                 <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
                 <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
             </div>
         </div>
-    </footer>    
+    </footer>
 </div>
